--- a/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
+++ b/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
@@ -1,361 +1,204 @@
 {
-	"AWSTemplateFormatVersion": "2010-09-09",
-	"Description": "Root stack for the Amplify AWS CloudFormation provider",
-	"Parameters": {
-		"DeploymentBucketName": {
-			"Description": "Name of the common deployment bucket provided by the parent stack",
-			"Type": "String",
-			"Default": "DeploymentBucket"
-		},
-		"AuthRoleName": {
-			"Type": "String",
-			"Default": "AuthRoleName"
-		},
-		"UnauthRoleName": {
-			"Type": "String",
-			"Default": "UnauthRoleName"
-		}
-	},
-	"Resources": {
-		"DeploymentBucket": {
-			"Type": "AWS::S3::Bucket",
-			"DeletionPolicy": "Retain",
-			"Properties": {
-				"BucketName": {
-					"Ref": "DeploymentBucketName"
-				}
-			}
-		},
-		"AuthRole": {
-			"Type": "AWS::IAM::Role",
-			"Properties": {
-				"RoleName": {
-					"Ref": "AuthRoleName"
-				},
-				"AssumeRolePolicyDocument": {
-					"Version": "2012-10-17",
-					"Statement": [
-						{
-							"Sid": "",
-							"Effect": "Deny",
-							"Principal": {
-								"Federated": "cognito-identity.amazonaws.com"
-							},
-							"Action": "sts:AssumeRoleWithWebIdentity"
-						}
-					]
-				}
-			}
-		},
-		"UnauthRole": {
-			"Type": "AWS::IAM::Role",
-			"Properties": {
-				"RoleName": {
-					"Ref": "UnauthRoleName"
-				},
-				"AssumeRolePolicyDocument": {
-					"Version": "2012-10-17",
-					"Statement": [
-						{
-							"Sid": "",
-							"Effect": "Deny",
-							"Principal": {
-								"Federated": "cognito-identity.amazonaws.com"
-							},
-							"Action": "sts:AssumeRoleWithWebIdentity"
-						}
-					]
-				}
-			}
-		},
-		"authvueauth2d2c6134": {
-			"Type": "AWS::CloudFormation::Stack",
-			"Properties": {
-				"TemplateURL": "https://s3.amazonaws.com/vueauth-dev-20191020165615-deployment/amplify-cfn-templates/auth/vueauth2d2c6134-cloudformation-template.yml",
-				"Parameters": {
-					"identityPoolName": "vueauth2d2c6134_identitypool_2d2c6134",
-					"allowUnauthenticatedIdentities": false,
-					"resourceNameTruncated": "vueaut2d2c6134",
-					"userPoolName": "vueauth2d2c6134_userpool_2d2c6134",
-					"autoVerifiedAttributes": "email",
-					"mfaConfiguration": "OFF",
-					"mfaTypes": "SMS Text Message",
-					"smsAuthenticationMessage": "Your authentication code is {####}",
-					"smsVerificationMessage": "Your verification code is {####}",
-					"emailVerificationSubject": "Your verification code",
-					"emailVerificationMessage": "Your verification code is {####}",
-					"defaultPasswordPolicy": false,
-					"passwordPolicyMinLength": 8,
-					"passwordPolicyCharacters": "",
-					"requiredAttributes": "email",
-					"userpoolClientGenerateSecret": true,
-					"userpoolClientRefreshTokenValidity": 30,
-					"userpoolClientWriteAttributes": "email",
-					"userpoolClientReadAttributes": "email",
-					"userpoolClientLambdaRole": "vueaut2d2c6134_userpoolclient_lambda_role",
-					"userpoolClientSetAttributes": false,
-					"resourceName": "vueauth2d2c6134",
-					"authSelections": "identityPoolAndUserPool",
-					"authRoleArn": {
-						"Fn::GetAtt": [
-							"AuthRole",
-							"Arn"
-						]
-					},
-					"unauthRoleArn": {
-						"Fn::GetAtt": [
-							"UnauthRole",
-							"Arn"
-						]
-					},
-					"useDefault": "default",
-					"dependsOn": "",
-					"env": "dev"
-				}
-			}
-		},
-		"UpdateRolesWithIDPFunction": {
-			"DependsOn": [
-				"AuthRole",
-				"UnauthRole",
-				"authvueauth2d2c6134"
-			],
-			"Type": "AWS::Lambda::Function",
-			"Properties": {
-				"Code": {
-					"ZipFile": {
-						"Fn::Join": [
-							"\n",
-							[
-								"const response = require('cfn-response');",
-								"const aws = require('aws-sdk');",
-								"let responseData = {};",
-								"exports.handler = function(event, context) {",
-								"  try {",
-								"    let authRoleName = event.ResourceProperties.authRoleName;",
-								"    let unauthRoleName = event.ResourceProperties.unauthRoleName;",
-								"    let idpId = event.ResourceProperties.idpId;",
-								"    let promises = [];",
-								"    let authParamsJson = { 'Version': '2012-10-17','Statement': [{'Effect': 'Allow','Principal': {'Federated': 'cognito-identity.amazonaws.com'},'Action': 'sts:AssumeRoleWithWebIdentity','Condition': {'StringEquals': {'cognito-identity.amazonaws.com:aud': idpId},'ForAnyValue:StringLike': {'cognito-identity.amazonaws.com:amr': 'authenticated'}}}]};",
-								"    let unauthParamsJson = { 'Version': '2012-10-17','Statement': [{'Effect': 'Allow','Principal': {'Federated': 'cognito-identity.amazonaws.com'},'Action': 'sts:AssumeRoleWithWebIdentity','Condition': {'StringEquals': {'cognito-identity.amazonaws.com:aud': idpId},'ForAnyValue:StringLike': {'cognito-identity.amazonaws.com:amr': 'unauthenticated'}}}]};",
-								"    if (event.RequestType == 'Delete') {",
-								"        delete authParamsJson.Statement.Condition;",
-								"        delete unauthParamsJson.Statement.Condition;",
-								"        let authParams = { PolicyDocument: JSON.stringify(authParamsJson),RoleName: authRoleName};",
-								"        let unauthParams = {PolicyDocument: JSON.stringify(unauthParamsJson),RoleName: unauthRoleName};",
-								"        const iam = new aws.IAM({ apiVersion: '2010-05-08', region: event.ResourceProperties.region});",
-								"        promises.push(iam.updateAssumeRolePolicy(authParams).promise());",
-								"        promises.push(iam.updateAssumeRolePolicy(unauthParams).promise());",
-								"        Promise.all(promises)",
-								"         .then((res) => {",
-								"            console.log(\"delete\" + res);",
-								"            console.log(\"response data\" + JSON.stringify(res));",
-								"            response.send(event, context, response.SUCCESS, res);",
-								"         });",
-								"    }",
-								"    if (event.RequestType == 'Update' || event.RequestType == 'Create') {",
-								"       const iam = new aws.IAM({ apiVersion: '2010-05-08', region: event.ResourceProperties.region});",
-								"        let authParams = { PolicyDocument: JSON.stringify(authParamsJson),RoleName: authRoleName};",
-								"        let unauthParams = {PolicyDocument: JSON.stringify(unauthParamsJson),RoleName: unauthRoleName};",
-								"        promises.push(iam.updateAssumeRolePolicy(authParams).promise());",
-								"        promises.push(iam.updateAssumeRolePolicy(unauthParams).promise());",
-								"        Promise.all(promises)",
-								"         .then((res) => {",
-								"            console.log(\"createORupdate\" + res);",
-								"            console.log(\"response data\" + JSON.stringify(res));",
-								"            response.send(event, context, response.SUCCESS, {});",
-								"         });",
-								"    }",
-								"  } catch(err) {",
-								"       console.log(err.stack);",
-								"       responseData = {Error: err};",
-								"       response.send(event, context, response.FAILED, responseData);",
-								"       throw err;",
-								"  }",
-								"};"
-							]
-						]
-					}
-				},
-				"Handler": "index.handler",
-				"Runtime": "nodejs8.10",
-				"Timeout": "300",
-				"Role": {
-					"Fn::GetAtt": [
-						"UpdateRolesWithIDPFunctionRole",
-						"Arn"
-					]
-				}
-			}
-		},
-		"UpdateRolesWithIDPFunctionOutputs": {
-			"Type": "Custom::LambdaCallout",
-			"Properties": {
-				"ServiceToken": {
-					"Fn::GetAtt": [
-						"UpdateRolesWithIDPFunction",
-						"Arn"
-					]
-				},
-				"region": {
-					"Ref": "AWS::Region"
-				},
-				"idpId": {
-					"Fn::GetAtt": [
-						"authvueauth2d2c6134",
-						"Outputs.IdentityPoolId"
-					]
-				},
-				"authRoleName": {
-					"Ref": "AuthRoleName"
-				},
-				"unauthRoleName": {
-					"Ref": "UnauthRoleName"
-				}
-			}
-		},
-		"UpdateRolesWithIDPFunctionRole": {
-			"Type": "AWS::IAM::Role",
-			"Properties": {
-				"RoleName": {
-					"Fn::Join": [
-						"",
-						[
-							{
-								"Ref": "AuthRoleName"
-							},
-							"-idp"
-						]
-					]
-				},
-				"AssumeRolePolicyDocument": {
-					"Version": "2012-10-17",
-					"Statement": [
-						{
-							"Effect": "Allow",
-							"Principal": {
-								"Service": [
-									"lambda.amazonaws.com"
-								]
-							},
-							"Action": [
-								"sts:AssumeRole"
-							]
-						}
-					]
-				},
-				"Policies": [
-					{
-						"PolicyName": "UpdateRolesWithIDPFunctionPolicy",
-						"PolicyDocument": {
-							"Version": "2012-10-17",
-							"Statement": [
-								{
-									"Effect": "Allow",
-									"Action": [
-										"logs:CreateLogGroup",
-										"logs:CreateLogStream",
-										"logs:PutLogEvents"
-									],
-									"Resource": "arn:aws:logs:*:*:*"
-								},
-								{
-									"Effect": "Allow",
-									"Action": "iam:UpdateAssumeRolePolicy",
-									"Resource": {
-										"Fn::GetAtt": [
-											"AuthRole",
-											"Arn"
-										]
-									}
-								},
-								{
-									"Effect": "Allow",
-									"Action": "iam:UpdateAssumeRolePolicy",
-									"Resource": {
-										"Fn::GetAtt": [
-											"UnauthRole",
-											"Arn"
-										]
-									}
-								}
-							]
-						}
-					}
-				]
-			}
-		}
-	},
-	"Outputs": {
-		"Region": {
-			"Description": "CloudFormation provider root stack Region",
-			"Value": {
-				"Ref": "AWS::Region"
-			},
-			"Export": {
-				"Name": {
-					"Fn::Sub": "${AWS::StackName}-Region"
-				}
-			}
-		},
-		"StackName": {
-			"Description": "CloudFormation provider root stack ID",
-			"Value": {
-				"Ref": "AWS::StackName"
-			},
-			"Export": {
-				"Name": {
-					"Fn::Sub": "${AWS::StackName}-StackName"
-				}
-			}
-		},
-		"StackId": {
-			"Description": "CloudFormation provider root stack name",
-			"Value": {
-				"Ref": "AWS::StackId"
-			},
-			"Export": {
-				"Name": {
-					"Fn::Sub": "${AWS::StackName}-StackId"
-				}
-			}
-		},
-		"DeploymentBucketName": {
-			"Description": "CloudFormation provider root stack deployment bucket name",
-			"Value": {
-				"Ref": "DeploymentBucketName"
-			},
-			"Export": {
-				"Name": {
-					"Fn::Sub": "${AWS::StackName}-DeploymentBucketName"
-				}
-			}
-		},
-		"AuthRoleArn": {
-			"Value": {
-				"Fn::GetAtt": [
-					"AuthRole",
-					"Arn"
-				]
-			}
-		},
-		"UnauthRoleArn": {
-			"Value": {
-				"Fn::GetAtt": [
-					"UnauthRole",
-					"Arn"
-				]
-			}
-		},
-		"AuthRoleName": {
-			"Value": {
-				"Ref": "AuthRole"
-			}
-		},
-		"UnauthRoleName": {
-			"Value": {
-				"Ref": "UnauthRole"
-			}
-		}
-	}
+  "AWSTemplateFormatVersion": "2010-09-09",
+  "Description": "Root Stack for AWS Amplify CLI",
+  "Parameters": {
+    "DeploymentBucketName": {
+      "Description": "Name of the common deployment bucket provided by the parent stack",
+      "Type": "String",
+      "Default": "DeploymentBucket"
+    },
+    "AuthRoleName": {
+      "Type": "String",
+      "Default": "AuthRoleName"
+    },
+    "UnauthRoleName": {
+      "Type": "String",
+      "Default": "UnauthRoleName"
+    }
+  },
+  "Resources": {
+    "DeploymentBucket": {
+      "Type": "AWS::S3::Bucket",
+      "DeletionPolicy": "Retain",
+      "Properties": {
+        "BucketName": {
+          "Ref": "DeploymentBucketName"
+        }
+      }
+    },
+    "AuthRole": {
+      "Type": "AWS::IAM::Role",
+      "Properties": {
+        "RoleName": {
+          "Ref": "AuthRoleName"
+        },
+        "AssumeRolePolicyDocument": {
+          "Version": "2012-10-17",
+          "Statement": [
+            {
+              "Sid": "",
+              "Effect": "Deny",
+              "Principal": {
+                "Federated": "cognito-identity.amazonaws.com"
+              },
+              "Action": "sts:AssumeRoleWithWebIdentity"
+            }
+          ]
+        }
+      }
+    },
+    "UnauthRole": {
+      "Type": "AWS::IAM::Role",
+      "Properties": {
+        "RoleName": {
+          "Ref": "UnauthRoleName"
+        },
+        "AssumeRolePolicyDocument": {
+          "Version": "2012-10-17",
+          "Statement": [
+            {
+              "Sid": "",
+              "Effect": "Deny",
+              "Principal": {
+                "Federated": "cognito-identity.amazonaws.com"
+              },
+              "Action": "sts:AssumeRoleWithWebIdentity"
+            }
+          ]
+        }
+      }
+    },
+    "authvueauth2d2c6134": {
+      "Type": "AWS::CloudFormation::Stack",
+      "Properties": {
+        "TemplateURL": "https://s3.amazonaws.com/amplify-vueauth-local-193110-deployment/amplify-cfn-templates/auth/vueauth2d2c6134-cloudformation-template.yml",
+        "Parameters": {
+          "resourceNameTruncated": "vueaut2d2c6134",
+          "userPoolName": "vueauth2d2c6134_userpool_2d2c6134",
+          "autoVerifiedAttributes": "email",
+          "mfaConfiguration": "OFF",
+          "mfaTypes": "SMS Text Message",
+          "smsAuthenticationMessage": "Your authentication code is {####}",
+          "smsVerificationMessage": "Your verification code is {####}",
+          "emailVerificationSubject": "admintools.io - Email Verification",
+          "emailVerificationMessage": "Your verification code is {####}",
+          "defaultPasswordPolicy": true,
+          "passwordPolicyMinLength": "8",
+          "passwordPolicyCharacters": "Requires Lowercase,Requires Uppercase,Requires Numbers,Requires Symbols",
+          "requiredAttributes": "email",
+          "userpoolClientGenerateSecret": true,
+          "userpoolClientRefreshTokenValidity": "30",
+          "userpoolClientWriteAttributes": "email",
+          "userpoolClientReadAttributes": "email",
+          "userpoolClientLambdaRole": "vueaut2d2c6134_userpoolclient_lambda_role",
+          "userpoolClientSetAttributes": false,
+          "resourceName": "vueauth2d2c6134",
+          "authSelections": "userPoolOnly",
+          "authRoleArn": {
+            "Fn::GetAtt": [
+              "AuthRole",
+              "Arn"
+            ]
+          },
+          "unauthRoleArn": {
+            "Fn::GetAtt": [
+              "UnauthRole",
+              "Arn"
+            ]
+          },
+          "useDefault": "manual",
+          "dependsOn": "",
+          "userPoolGroups": false,
+          "adminQueries": false,
+          "triggers": "{}",
+          "hostedUI": true,
+          "hostedUIDomainName": "staff",
+          "authProvidersUserPool": "",
+          "hostedUIProviderMeta": "[]",
+          "oAuthMetadata": "{\"AllowedOAuthFlows\":[\"code\"],\"AllowedOAuthScopes\":[\"phone\",\"email\",\"openid\",\"profile\",\"aws.cognito.signin.user.admin\"],\"CallbackURLs\":[\"https://admintools.io/\"],\"LogoutURLs\":[\"https://admintools.io/\"]}",
+          "userPoolGroupList": "",
+          "serviceName": "Cognito",
+          "parentStack": {
+            "Ref": "AWS::StackId"
+          },
+          "permissions": "",
+          "authProviders": "",
+          "hostedUIProviderCreds": "[]",
+          "env": "local"
+        }
+      }
+    }
+  },
+  "Outputs": {
+    "Region": {
+      "Description": "CloudFormation provider root stack Region",
+      "Value": {
+        "Ref": "AWS::Region"
+      },
+      "Export": {
+        "Name": {
+          "Fn::Sub": "${AWS::StackName}-Region"
+        }
+      }
+    },
+    "StackName": {
+      "Description": "CloudFormation provider root stack ID",
+      "Value": {
+        "Ref": "AWS::StackName"
+      },
+      "Export": {
+        "Name": {
+          "Fn::Sub": "${AWS::StackName}-StackName"
+        }
+      }
+    },
+    "StackId": {
+      "Description": "CloudFormation provider root stack name",
+      "Value": {
+        "Ref": "AWS::StackId"
+      },
+      "Export": {
+        "Name": {
+          "Fn::Sub": "${AWS::StackName}-StackId"
+        }
+      }
+    },
+    "DeploymentBucketName": {
+      "Description": "CloudFormation provider root stack deployment bucket name",
+      "Value": {
+        "Ref": "DeploymentBucketName"
+      },
+      "Export": {
+        "Name": {
+          "Fn::Sub": "${AWS::StackName}-DeploymentBucketName"
+        }
+      }
+    },
+    "AuthRoleArn": {
+      "Value": {
+        "Fn::GetAtt": [
+          "AuthRole",
+          "Arn"
+        ]
+      }
+    },
+    "UnauthRoleArn": {
+      "Value": {
+        "Fn::GetAtt": [
+          "UnauthRole",
+          "Arn"
+        ]
+      }
+    },
+    "AuthRoleName": {
+      "Value": {
+        "Ref": "AuthRole"
+      }
+    },
+    "UnauthRoleName": {
+      "Value": {
+        "Ref": "UnauthRole"
+      }
+    }
+  }
 }
